update path to module

--- a/setup/02_installing-python-libraries/python_environment_check.ipynb
+++ b/setup/02_installing-python-libraries/python_environment_check.ipynb
@@ -12,27 +12,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad0759b9",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "67f6f7ed-b67d-465b-bf6f-a99b0d996930",
+   "execution_count": 4,
+   "id": "e597ee5d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[OK] Your Python version is 3.10.12\n",
-      "[OK] numpy 1.26.0\n",
-      "[OK] matplotlib 3.8.2\n",
-      "[OK] jupyterlab 4.0.6\n",
-      "[OK] tensorflow 2.15.0\n",
-      "[OK] torch 2.2.1\n",
-      "[OK] tqdm 4.66.1\n",
-      "[OK] tiktoken 0.5.1\n"
+      "Current working directory: /Users/sald/code/LLMs-from-scratch\n",
+      "\n",
+      "Python path:\n",
+      "  /Users/sald/code/LLMs-from-scratch\n",
+      "  /opt/homebrew/Cellar/python@3.13/3.13.9_1/Frameworks/Python.framework/Versions/3.13/lib/python313.zip\n",
+      "  /opt/homebrew/Cellar/python@3.13/3.13.9_1/Frameworks/Python.framework/Versions/3.13/lib/python3.13\n",
+      "  /opt/homebrew/Cellar/python@3.13/3.13.9_1/Frameworks/Python.framework/Versions/3.13/lib/python3.13/lib-dynload\n",
+      "  \n",
+      "  /Users/sald/code/LLMs-from-scratch/.venv/lib/python3.13/site-packages\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "print(\"Current working directory:\", os.getcwd())\n",
+    "print(\"\\nPython path:\")\n",
+    "for p in sys.path:\n",
+    "    print(f\"  {p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67f6f7ed-b67d-465b-bf6f-a99b0d996930",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'python_environment_check'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(notebook_dir) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m      7\u001b[39m     sys.path.insert(\u001b[32m0\u001b[39m, \u001b[38;5;28mstr\u001b[39m(notebook_dir))\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpython_environment_check\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m check_packages, get_requirements_dict\n\u001b[32m     11\u001b[39m d = get_requirements_dict()\n\u001b[32m     12\u001b[39m check_packages(d)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'python_environment_check'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Add the directory containing this notebook to Python path\n",
+    "notebook_dir = Path().absolute()\n",
+    "if str(notebook_dir) not in sys.path:\n",
+    "    sys.path.insert(0, str(notebook_dir))\n",
+    "\n",
+    "from python_environment_check import check_packages, get_requirements_dict\n",
+    "\n",
+    "d = get_requirements_dict()\n",
+    "check_packages(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2cdb21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ca7480",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba06358e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "28669c83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK] Your Python version is 3.13.9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK] torch 2.9.0\n",
+      "[OK] jupyterlab 4.4.10\n",
+      "[OK] tiktoken 0.12.0\n",
+      "[OK] matplotlib 3.10.7\n",
+      "[OK] tensorflow 2.20.0\n",
+      "[OK] tqdm 4.67.1\n",
+      "[OK] numpy 2.3.4\n",
+      "[OK] pandas 2.3.3\n",
+      "[OK] psutil 7.1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the directory where this notebook is located to Python path\n",
+    "notebook_path = os.path.abspath(\"setup/02_installing-python-libraries\")\n",
+    "if notebook_path not in sys.path:\n",
+    "    sys.path.insert(0, notebook_path)\n",
+    "\n",
     "from python_environment_check import check_packages, get_requirements_dict\n",
     "\n",
     "d = get_requirements_dict()\n",
